Implement calculator functionality.

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 <body>
     <main>
         <div id="calculator">
-            <div id="display">1234</div>
+            <div id="display"></div>
             <div class="rows" id="row1">
                 <button id="clear">Clear</button>
             </div>
             <div class="rows" id="row2">
-                <button class="generic-button" id="1">1</button>
-                <button class="generic-button" id="2">2</button>
-                <button class="generic-button" id="3">3</button>
-                <button class="generic-button" id="/">/</button>
+                <button class="operand" id="1">1</button>
+                <button class="operand" id="2">2</button>
+                <button class="operand" id="3">3</button>
+                <button class="operator" id="divide">/</button>
             </div>
             <div class="rows" id="row3">
-                <button class="generic-button" id="4">4</button>
-                <button class="generic-button" id="5">5</button>
-                <button class="generic-button" id="6">6</button>
-                <button class="generic-button" id="*">*</button>
+                <button class="operand" id="4">4</button>
+                <button class="operand" id="5">5</button>
+                <button class="operand" id="6">6</button>
+                <button class="operator" id="times">*</button>
             </div>
             <div class="rows" id="row4">
-                <button class="generic-button" id="7">7</button>
-                <button class="generic-button" id="8">8</button>
-                <button class="generic-button" id="9">9</button>
-                <button class="generic-button" id="-">-</button>
+                <button class="operand" id="7">7</button>
+                <button class="operand" id="8">8</button>
+                <button class="operand" id="9">9</button>
+                <button class="operator" id="minus">-</button>
             </div>
             <div class="rows" id="row5">
-                <button class="generic-button" id="0">0</button>
-                <button class="generic-button" id=".">.</button>
-                <button class="generic-button" id="=">=</button>
-                <button class="generic-button" id="+">+</button>
+                <button class="operand" id="0">0</button>
+                <button id="decimalPoint">.</button>
+                <button id="equalSign">=</button>
+                <button class="operator" id="plus">+</button>
             </div>
             <div>
         </div>
