--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
                 <button id="clear">Clear</button>
             </div>
             <div class="rows" id="row2">
-                <button class="operand" id="1">1</button>
-                <button class="operand" id="2">2</button>
-                <button class="operand" id="3">3</button>
+                <button class="operand" id="one">1</button>
+                <button class="operand" id="two">2</button>
+                <button class="operand" id="three">3</button>
                 <button class="operator" id="divide">/</button>
             </div>
             <div class="rows" id="row3">
-                <button class="operand" id="4">4</button>
-                <button class="operand" id="5">5</button>
-                <button class="operand" id="6">6</button>
+                <button class="operand" id="four">4</button>
+                <button class="operand" id="five">5</button>
+                <button class="operand" id="six">6</button>
                 <button class="operator" id="times">*</button>
             </div>
             <div class="rows" id="row4">
-                <button class="operand" id="7">7</button>
-                <button class="operand" id="8">8</button>
-                <button class="operand" id="9">9</button>
+                <button class="operand" id="seven">7</button>
+                <button class="operand" id="eight">8</button>
+                <button class="operand" id="nine">9</button>
                 <button class="operator" id="minus">-</button>
             </div>
             <div class="rows" id="row5">
-                <button class="operand" id="0">0</button>
+                <button class="operand" id="zero">0</button>
                 <button id="decimalPoint">.</button>
                 <button id="equalSign">=</button>
                 <button class="operator" id="plus">+</button>
